Still trying to work out the twitter stuff... Updating the (dead end progress) so far so I can branch and try another approach.

--- a/BotticelliBot.cabal
+++ b/BotticelliBot.cabal
@@ -67,7 +67,11 @@ executable BotticelliBot
                        twitter-types,
                        twitter-types-lens,
                        authenticate-oauth,
-                       conduit
+                       conduit,
+                       http-conduit,
+                       text,
+                       transformers,
+                       lens
   
   -- Directories containing source files.
   hs-source-dirs:      src
