Reconfigured the WordsApi api to work through Mashape: that gives us 1500 more tweets/day, plus we were going to have to switch by Feb 20th any how. In the process, I created Web.SimpleHTTPConduit.hs, which is a tiny wraper around Network.HTTP.Conduit that performs our https queries.

--- a/BotticelliBot.cabal
+++ b/BotticelliBot.cabal
@@ -65,7 +65,11 @@ executable BotticelliBot
                        QuickCheck >= 2.7.6,
                        text,
                        lens,
-                       process
+                       process,
+                       http-conduit,
+                       connection,
+                       bytestring,
+                       http-types
   
   -- Directories containing source files.
   hs-source-dirs:      src
