Added some higher level abstraction modules Applicative and Monad.Loop, in order to clean up some code. Fixed the bug that was truncating complements after the preposition. Tidied things a bit here and there.

--- a/BotticelliBot.cabal
+++ b/BotticelliBot.cabal
@@ -70,7 +70,8 @@ executable BotticelliBot
                        connection,
                        bytestring,
                        http-types,
-                       regex-compat >=0.95
+                       regex-compat >=0.95,
+                       monad-loops
   
   -- Directories containing source files.
   hs-source-dirs:      src
